# RayTracer

./: .doxyfile  .gitignore  CMakeLists.txt  README.md  RayTracerConfig.h.in
assets/: simple.fs  simple.vs
scenes/: sample.json
src/: CMakeLists.txt  camera.cpp  camera.h  glutil.cpp  glutil.h  main.cpp  material.h  plane.cpp  plane.h  point.cpp  point.h  prefix.h  raytracer.cpp  raytracer.h  sphere.cpp  sphere.h  surface.h  vector.cpp  vector.h
src/buffers/: ElementBuffer.cpp  ElementBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/io/: fileloader.cpp  fileloader.h
src/lights/: balllight.cpp  balllight.h  dirlight.cpp  dirlight.h  light.h  pointlight.cpp  pointlight.h
src/math/: aabbox.cpp  aabbox.h  octree.cpp  octree.h  perlin.cpp  perlin.h  vector.cpp  vector.h
src/surfaces/: aacube.cpp  aacube.h  plane.cpp  plane.h  sphere.cpp  sphere.h  surface.h
